# DeepEyePredictor

./: .gitignore  README.md  ReleaseNote.txt
img/classification/: image.txt
include/: deepeye_object_detector_gpu.h
lib/: deepeye_predictor_gpu.lib
src/: classifier_sample.sln
src/classifier_sample/: CMakeLists.txt  classifier_sample.cpp  cm_image.cpp
src/ssd_sample/: CMakeLists.txt  cm_image.cpp  ssd_sample.cpp
vs2017/classifier_sample/: classifier_sample.cpp  classifier_sample.sln  cm_image.cpp  cm_image.h  deepeye_image_classifier_gpu.h
vs2017/classifier_sample/classifier_sample/: classifier_sample.vcxproj  classifier_sample.vcxproj.filters
vs2017/ssd_sample/: cm_image.cpp  deepeye_object_detector_gpu.h  ssd_sample.sln
vs2017/ssd_sample/ssd_sample/: ssd_sample.vcxproj
